# inline-algorithm-sdk

./: .gitignore  .pylintrc  LICENSE  NOTICE  PramanaInlineAlgorithmClass.py  README.md  helpers.py  models.py  pyproject.toml  test_example.py
.github/workflows/: pylint.yml
docs/: conf.py  example.rst  index.rst  module.rst  requirements.txt  usage.rst
docs/_build/doctrees/: environment.pickle  example.doctree  examples.doctree  index.doctree  usage.doctree
docs/_build/html/: .buildinfo  example.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: examples.rst.txt  index.rst.txt
examples/: __init__.py  test_example.py
examples/pramana_api_call_simulator/: README.md  config.ini  pramana_inline_algorithm_simulator.py  pramana_scanning_process_simulator.py  requirements-for-simulator.txt  setup.sh
examples/pramana_api_call_simulator/mock_scanner_service/: mock_scanner_service.py  models_scanner.py  scanner_service_helpers.py
src/inline_algorithm/: AbstractInlineAlgorithm.py  AbstractInlineAlgorithmClass.py  PramanaInlineAlgorithm.py  PramanaInlineAlgorithmClass.py  abstract_inline_algorithm.py  inline_algo_queue_processor.py  models.py
